--- a/sass/blocks/_consultation.scss
+++ b/sass/blocks/_consultation.scss
@@ -1,7 +1,7 @@
 .consultation {
   min-height: 680px;
   padding: 100px 0 108px;
-  background: url("../../img/bg/bg_2.png") center (center/cover) no-repeat;
+  background: url("../img/bg/bg_2.png") center (center/cover) no-repeat;
   &__text {
     padding-top: 8px;
     font-weight: 300;
