--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import "blocks/header-box";
 @import "blocks/consultation";
 @import "blocks/forms";
+@import "blocks/carousel";
 @import "base/media";
 
 
