--- a/sass/blocks/_header-box.scss
+++ b/sass/blocks/_header-box.scss
@@ -2,6 +2,7 @@
   text-align: center;
   font-size: 30px;
   color: #0D0D0D;
+  text-transform: uppercase;
   &_bold {
     font-weight: 700;
     line-height: 30px;
@@ -10,8 +11,11 @@
     text-align: left;
     font-weight: 700;
     font-size: 36px;
-    text-transform: uppercase;
     line-height: 54px;
     color: #FFFFFF;
+  }
+  &_thin {
+    line-height: 30px;
+    font-weight: 500;
   }
 }
