--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,8 @@
 @import "blocks/consultation";
 @import "blocks/forms";
 @import "blocks/carousel";
+@import "blocks/products";
+@import "blocks/catalog";
 @import "base/media";
 
 
