--- a/sass/blocks/_catalog.scss
+++ b/sass/blocks/_catalog.scss
@@ -1,20 +1,30 @@
 .catalog {
   padding-top: 60px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+
+  &__con {
+    display: none;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    &_active {
+      display: flex;
+    }
+  }
+
   &__item {
     padding: 20px 22px;
     margin-bottom: 20px;
     width: 300px;
     height: 440px;
     border: 2px solid #E8E8E8;
+    overflow: hidden;
+
     img {
       display: block;
       margin: 0 auto;
       height: 200px;
       width: auto;
     }
+
     hr {
       width: 100%;
       margin: 19px 0;
@@ -54,6 +64,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 14px;
+
     &:hover {
       color: $main-color;
     }
@@ -73,4 +84,74 @@
     line-height: 20px;
     color: #050505;
   }
+
+  &__item-wrapper {
+    display: flex;
+    width: calc(200% + 40px);
+    height: 314px;
+  }
+
+  &__content {
+    width: 50%;
+    margin-right: 0;
+    transform: translateX(-100%);
+    transition: 0.5s all;
+    margin-bottom: 0;
+
+    &_active {
+      transform: translateX(0%);
+      margin-right: 20px;
+    }
+  }
+
+  &__list {
+    position: relative;
+    width: 50%;
+    margin-left: 20px;
+    transform: translateX(0%);
+    padding-right: 20px;
+    transition: 0.5s all;
+    padding-left: 19px;
+    margin-bottom: 0;
+    list-style-type: none;
+
+    li {
+      position: relative;
+      font-weight: 300;
+      font-size: 14px;
+      color: #555555;
+      margin-bottom: 20px;
+      &:before {
+        content: '';
+        position: absolute;
+        width: 5px;
+        height: 5px;
+        background-color: $main-color;
+        left: -14px;
+        top: 7px ;
+      }
+    }
+
+    &_active {
+      transform: translateX(-100%);
+      margin-left: 0;
+
+    }
+  }
+
+  &__back {
+    position: absolute;
+    font-weight: 500;
+    font-size: 14px;
+    color: $main-color;
+    text-transform: uppercase;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(calc(-50% - 19px));
+    &:hover {
+      color: $main-color;
+    }
+
+  }
+
 }
