--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/carousel";
 @import "blocks/products";
 @import "blocks/catalog";
+@import "blocks/reviews";
 @import "base/media";
 
 
