--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/products";
 @import "blocks/catalog";
 @import "blocks/reviews";
+@import "blocks/footer";
 @import "base/media";
 
 
