--- a/sass/blocks/_buttons.scss
+++ b/sass/blocks/_buttons.scss
@@ -1,31 +1,28 @@
 .button {
-  width: 150px;
-  height: 30px;
-  border-radius: 5px;
-  background-color: $main-color;
-  border: none;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 12px;
-  color: #FFFFFF;
-
-  &_main {
-    width: 300px;
-    height: 50px;
-    margin-top: 65px;
+    width: 150px;
+    height: 30px;
+    border-radius: 5px;
+    background-color: $main-color;
+    border: none;
+    color: #ffffff;
+    font-size: 12px;
     font-weight: 500;
-    font-size: 16px;
-  }
-
-  &_con {
-    width: 300px;
-    height: 55px;
-    font-weight: 300;
-    font-size: 16px;
-  }
-  &_cat {
-    width: 130px;
-    height: 40px;
-    font-size: 14px;
-  }
+    text-transform: uppercase;
+    &_main {
+        margin-top: 67px;
+        width: 300px;
+        height: 50px;
+        font-size: 16px;
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        color: #ffffff;
+        font-size: 16px;
+    }
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
