--- a/sass/blocks/_consultation.scss
+++ b/sass/blocks/_consultation.scss
@@ -1,12 +1,10 @@
 .consultation {
-  min-height: 680px;
-  padding: 100px 0 108px;
-  background: url("../img/bg/bg_2.png") center (center/cover) no-repeat;
-  &__text {
-    padding-top: 8px;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 30px;
-    color: #FFFFFF;
-  }
+    min-height: 680px;
+    padding: 100px 0 92px 0;
+    background: url('../img/consultation.jpg') center (center/cover) no-repeat;
+    &__descr {
+        color: #ffffff;
+        font-size: 20px;
+        font-weight: 500;
+    }
 }
