--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,25 +1,20 @@
-@import "base/variables";
-@import "../css/font.css";
-@import "blocks/promo";
-@import "blocks/header";
-@import "blocks/buttons";
-@import "blocks/benefits";
-@import "blocks/header-box";
-@import "blocks/consultation";
-@import "blocks/forms";
-@import "blocks/carousel";
-@import "blocks/products";
-@import "blocks/catalog";
-@import "blocks/reviews";
-@import "blocks/footer";
-@import "base/media";
-
-
+@import 'base/variables';
 * {
-  font-family: 'Museo Sans Cyrl', sans-serif;
+    font-family: 'Museo Sans Cyrl', sans-serif;
 }
-
 .container {
-  max-width: 950px;
-  margin: 0 auto;
+    max-width: 950px;
+    margin: 0 auto;
 }
+@import 'blocks/promo';
+@import 'blocks/header.scss';
+@import 'blocks/buttons';
+@import 'blocks/advantages';
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feed';
+@import 'blocks/footer';
+@import 'blocks/modal';
