--- a/sass/blocks/_consultation.scss
+++ b/sass/blocks/_consultation.scss
@@ -7,4 +7,15 @@
         font-size: 20px;
         font-weight: 500;
     }
+
+    .error {
+        border: 1px solid red;
+    }
+
+    label.error {
+        color: #fff;
+        border: none;
+        text-align: center;
+        margin-bottom: 18px;
+    }
 }
