add some animation

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,6 @@
 @import 'base/variables';
+@import "base/animations";
+@import "base/mixins";
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
